force-app/main/default/objects/Account_Program__c/Account_Program__c.object-meta.xml
<CustomObject>
    <description>The Student Program record is a join between Contact, Account, Program</description>
    <label>Account Program</label>
    <nameField>
        <label>Account - Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>