force-app/main/default/objects/Account_Program__c/fields/Account_Director__c.field-meta.xml
<CustomField>
    <fullName>Account_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Director_of_Account_Program</relationshipName>
    <type>Lookup</type>
</CustomField>