force-app/main/default/objects/Account_Program__c/fields/Client_Services_Manager__c.field-meta.xml
<CustomField>
    <fullName>Client_Services_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Services Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Services_Manager_Account_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>