force-app/main/default/objects/Account_Program__c/fields/of_Students_Left_to_Hire__c.field-meta.xml
<CustomField>
    <fullName>of_Students_Left_to_Hire__c</fullName>
    <formula>Students_Needed__c  -  Students_Hired__c +  Students_Dropped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Students Left to Hire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>