force-app/main/default/objects/Account_Program__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>Used for form assembly. Form assembly does not read formula fields so workflow is created.</description>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>