force-app/main/default/objects/Account_Program__c/fields/Recruiting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiting Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruiting_Manager_of_Account_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>