force-app/main/default/objects/Account_Program__c/fields/Recruiting_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Sentiment__c</fullName>
    <label>Recruiting Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Track</fullName>
                <color>#33FF33</color>
                <label>On-Track</label>
            </value>
            <value>
                <fullName>At-Risk</fullName>
                <color>#FFFF66</color>
                <label>At-Risk</label>
            </value>
            <value>
                <fullName>Off-Track</fullName>
                <color>#FF0000</color>
                <label>Off-Track</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>