force-app/main/default/objects/Account_Program__c/fields/Students_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Students_Dropped__c</fullName>
    <inlineHelpText>Automated field that rolls up a count of Account-Program where status = Dropped</inlineHelpText>
    <label>Students Dropped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>