force-app/main/default/objects/Account_Program__c/fields/Students_Hired__c.field-meta.xml
<CustomField>
    <fullName>Students_Hired__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Students Hired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>